k8s/sovereign-gamestats-http.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sovereign-gamestats-http
  labels:
    app: sovereign-gamestats-http
spec:
  replicas: 2
  selector:
    matchLabels:
      app: sovereign-gamestats-http
  template:
    metadata:
      labels:
        app: sovereign-gamestats-http
    spec:
      containers:
      - name: gamestats-http
        image: project_sovereign_master:latest
        imagePullPolicy: Never
        command: ["python", "gamestats_server_http.py"]
        ports:
        - containerPort: 9002
          protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: sovereign-gamestats-http
spec:
  selector:
    app: sovereign-gamestats-http
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 9002
      targetPort: 9002
